--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -5,6 +5,10 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
 }
 
+.white-background {
+    -fx-background-color: white;
+}
+
 /* Style for the sidebar */
 .sidebar {
     -fx-background-color: linear-gradient(to right, #9370DB, #20B2AA);
