--- a/src/main/resources/com/example/sportx/store-view.fxml
+++ b/src/main/resources/com/example/sportx/store-view.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
@@ -24,13 +21,23 @@
                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                      </font>
                   </Label>
-                  <ScrollPane fitToWidth="true" layoutX="5.0" layoutY="56.0" prefHeight="220.0" VBox.vgrow="ALWAYS" styleClass="transparent" stylesheets="@../../../css/styles.css">
+                  <ScrollPane layoutX="5.0" layoutY="56.0" prefHeight="220.0" prefWidth="905.0" styleClass="transparent" stylesheets="@../../../css/styles.css">
                      <content>
-                        <HBox fx:id="cardLayout" prefHeight="200.0" prefWidth="1000.0">
-                           <cursor>
-                              <Cursor fx:constant="DEFAULT" />
-                           </cursor>
-                        </HBox>
+                        <HBox fx:id="cardLayout" alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="1000.0" spacing="20.0" />
+                     </content>
+                  </ScrollPane>
+                  <Label layoutX="14.0" layoutY="286.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="150.0" text="Products">
+                     <font>
+                        <Font name="Berlin Sans FB Demi Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ScrollPane layoutX="10.0" layoutY="336.0" prefHeight="200.0" prefWidth="900.0" styleClass="transparent" stylesheets="@../../../css/styles.css">
+                     <content>
+                        <GridPane fx:id="itemContainer" prefHeight="0.0" prefWidth="7.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                        </GridPane>
                      </content>
                   </ScrollPane>
                </children>
