--- a/src/main/resources/com/example/sportx/product.fxml
+++ b/src/main/resources/com/example/sportx/product.fxml
@@ -7,20 +7,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="180.0" style="-fx-background-radius: 10;" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.ProductController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="180.0" style="-fx-background-radius: 10;" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.ProductController" onMouseClicked="#handleClick">
    <children>
-      <ImageView fx:id="imageName" fitHeight="160.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../img/products/p1.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="imageName" fitHeight="160.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true" />
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
          <children>
-            <Label fx:id="itemName" prefHeight="20.0" prefWidth="220.0" stylesheets="@../../../css/styles.css" text="Messi T-Shirt ">
+            <Label fx:id="itemName" prefHeight="20.0" prefWidth="220.0" stylesheets="@../../../css/styles.css">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="18.0" />
-               </font></Label>
-            <Label fx:id="ownerName" prefHeight="20.0" prefWidth="220.0" text="Messi ">
+               </font>
+            </Label>
+            <Label fx:id="ownerName" prefHeight="20.0" prefWidth="220.0">
+               <font>
+                  <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="productPrice" prefHeight="20.0" prefWidth="220.0">
+               <font>
+                  <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="stockQuantity" prefHeight="20.0" prefWidth="220.0">
+               <font>
+                  <Font name="Berlin Sans FB Demi Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="productType" prefHeight="20.0" prefWidth="220.0">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="12.0" />
                </font>
