--- a/src/main/resources/com/example/sportx/store-view.fxml
+++ b/src/main/resources/com/example/sportx/store-view.fxml
@@ -21,7 +21,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                      </font>
                   </Label>
-                  <ScrollPane layoutX="5.0" layoutY="56.0" prefHeight="220.0" prefWidth="905.0" styleClass="transparent" stylesheets="@../../../css/styles.css">
+                  <ScrollPane layoutX="5.0" layoutY="56.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="905.0" styleClass="transparent" stylesheets="@../../../css/styles.css">
                      <content>
                         <HBox fx:id="cardLayout" alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="1000.0" spacing="20.0" />
                      </content>
@@ -31,12 +31,12 @@
                         <Font name="Berlin Sans FB Demi Bold" size="18.0" />
                      </font>
                   </Label>
-                  <ScrollPane layoutX="10.0" layoutY="336.0" prefHeight="200.0" prefWidth="900.0" styleClass="transparent" stylesheets="@../../../css/styles.css">
+                  <ScrollPane layoutX="10.0" layoutY="336.0" prefHeight="270.0" prefWidth="900.0" styleClass="transparent" stylesheets="@../../../css/styles.css">
                      <content>
                         <GridPane fx:id="itemContainer" prefHeight="0.0" prefWidth="7.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
                         </GridPane>
                      </content>
                   </ScrollPane>
