--- a/src/main/resources/com/example/sportx/checkout-form-view.fxml
+++ b/src/main/resources/com/example/sportx/checkout-form-view.fxml
@@ -2,14 +2,13 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.CheckoutFormController">
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="700.0" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.CheckoutFormController">
     <children>
-        <Label text="Checkout Form" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
+        <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Checkout Form" />
         <ComboBox fx:id="cityComboBox" promptText="Select City" />
         <TextField fx:id="addressField" promptText="Address" />
         <TextField fx:id="phoneNumberField" promptText="Phone Number" />
-        <Button fx:id="placeOrderButton" text="Place Order" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 16px;" onAction="#placeOrder" />
+        <Button fx:id="placeOrderButton" onAction="#placeOrder" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 16px;" text="Place Order" />
     </children>
 </VBox>
