--- a/src/main/resources/com/example/sportx/order-confirmation-view.fxml
+++ b/src/main/resources/com/example/sportx/order-confirmation-view.fxml
@@ -2,12 +2,11 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="183.0" prefWidth="360.0" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label text="Order Confirmation" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
-        <Label text="Your order has been placed successfully!" style="-fx-font-size: 18px;" />
-        <Button text="Return to Home" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 16px;" />
+        <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Order Confirmation" />
+        <Label style="-fx-font-size: 18px;" text="Your order has been placed successfully!" />
+        <Button style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 16px;" text="Return to Home" />
     </children>
 </VBox>
