--- a/src/main/resources/com/example/sportx/product-detail.fxml
+++ b/src/main/resources/com/example/sportx/product-detail.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.ProductDetailController">
+<VBox fx:id="productDetailBox" alignment="CENTER" prefHeight="700.0" prefWidth="444.0" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.ProductDetailController">
     <children>
         <ImageView fx:id="productImage" fitHeight="300" fitWidth="300" />
         <Label fx:id="productName" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
@@ -13,6 +12,6 @@
         <Label fx:id="productPrice" style="-fx-font-size: 18px; -fx-text-fill: #4CAF50;" />
         <Label fx:id="stockQuantity" style="-fx-font-size: 16px;" />
         <Label fx:id="productType" style="-fx-font-size: 16px;" />
-        <Button text="Add to Cart" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 16px;" onAction="#addToCart" />
+        <Button fx:id="addToCartButton" onAction="#addToCart" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 16px;" text="Add to Cart" />
     </children>
 </VBox>
