--- a/src/main/resources/com/example/sportmarket/product-view.fxml
+++ b/src/main/resources/com/example/sportmarket/product-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.ProductDetailController">
+<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportmarket.ProductDetailController">
     <ImageView fx:id="productImage" fitHeight="300" fitWidth="300" />
     <Label fx:id="productName" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
     <Label fx:id="productDescription" wrapText="true" />
