--- a/src/main/resources/com/example/sportmarket/product.fxml
+++ b/src/main/resources/com/example/sportmarket/product.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="180.0" style="-fx-background-radius: 10;" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.ProductController" onMouseClicked="#handleClick">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="180.0" style="-fx-background-radius: 10;" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportmarket.ProductController" onMouseClicked="#handleClick">
    <children>
       <ImageView fx:id="imageName" fitHeight="160.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true" />
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
