--- a/src/main/resources/com/example/sportmarket/store-view.fxml
+++ b/src/main/resources/com/example/sportmarket/store-view.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportmarket.Controller">
    <top>
-      <fx:include source="navbar.fxml" />
+      <fx:include source="../../../navbar.fxml" />
    </top>
    <left>
       <fx:include source="sidebar.fxml" />
