--- a/src/main/resources/com/example/sportmarket/sidebar.fxml
+++ b/src/main/resources/com/example/sportmarket/sidebar.fxml
@@ -3,14 +3,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="TOP_LEFT" prefHeight="630.0" prefWidth="180.0" spacing="15.0" styleClass="sidebar" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_LEFT" prefHeight="630.0" prefWidth="180.0" spacing="15.0" styleClass="sidebar" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportmarket.sidebar" >
     <children>
         <Pane prefHeight="33.0" prefWidth="200.0" />
-        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="🏠 Accueil" />
-        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="📰 Actualités" />
-        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="🛒 Market" />
-        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="🎉 Événements" />
-        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="💬 Messages" />
-        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="⚙ Paramètres" />
+        <Button fx:id="homeButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="accueil" onAction="#goToHome"/>
+        <Button fx:id="actualitesButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="Actualités" onAction="#gotoActualite" />
+        <Button fx:id="marketButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="Market" onAction="#gotoMarket" />
+        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="Événements" />
+        <Button fx:id="messagesButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="Messages" onAction="#gotoMessages" />
+        <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" text="chatbot" />
     </children>
 </VBox>
