--- a/src/main/resources/AdminApprovalView.fxml
+++ b/src/main/resources/AdminApprovalView.fxml
@@ -4,10 +4,16 @@
 <?import javafx.fxml.FXML?>
 <?import javafx.fxml.FXMLLoader?>
 
+<?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.controller.abir.AdminApprovalController">
+    <stylesheets>
+        <URL value="@/AdminApprovalView.css"/>
+    </stylesheets>
     <!-- Add Navbar to the Top Section -->
     <top>
-        <fx:include source="navbar.fxml" fx:id="navbar"/>
+        <VBox style="-fx-padding: 0 0 20 0;"> <!-- Add padding directly in the FXML -->
+            <fx:include source="navbar.fxml" fx:id="navbar"/>
+        </VBox>
     </top>
 
     <!-- Existing Content in the Center Section -->
