--- a/src/main/resources/ChatView.fxml
+++ b/src/main/resources/ChatView.fxml
@@ -12,10 +12,16 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.util.Callback?>
 
+<?import java.net.URL?>
 <BorderPane fx:id="borderPane" maxHeight="620.0" maxWidth="1040.0" prefHeight="620.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportx.controller.abir.ChatController">
+   <stylesheets>
+      <URL value="@/ChatStyle.css"/>
+   </stylesheets>
    <!-- Add Navbar to the Top Section -->
    <top>
-      <fx:include source="navbar.fxml" fx:id="navbar"/>
+      <VBox style="-fx-padding: 0 0 20 0;"> <!-- Add padding directly in the FXML -->
+         <fx:include source="navbar.fxml" fx:id="navbar"/>
+      </VBox>
    </top>
    <center>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
