--- a/src/main/resources/MyGroups.fxml
+++ b/src/main/resources/MyGroups.fxml
@@ -9,10 +9,16 @@
 <?import javafx.fxml.FXML?>
 <?import javafx.fxml.FXMLLoader?>
 
+<?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx/8.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.sportx.controller.abir.MyGroupsController" prefHeight="400.0" prefWidth="600.0">
+    <stylesheets>
+        <URL value="@MyGroupsStyle.css" />
+    </stylesheets>
     <!-- Add Navbar to the Top Section -->
     <top>
-        <fx:include source="navbar.fxml" fx:id="navbar"/>
+        <VBox style="-fx-padding: 0 0 20 0;"> <!-- Add padding directly in the FXML -->
+            <fx:include source="navbar.fxml" fx:id="navbar"/>
+        </VBox>
     </top>
 
     <!-- Existing Content in the Center Section -->
