--- a/src/main/resources/chatboot_interface.fxml
+++ b/src/main/resources/chatboot_interface.fxml
@@ -4,7 +4,17 @@
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 
+<?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatboot.ChatbootController">
+    <stylesheets>
+        <URL value="@/chatboot_interface.css"/>
+    </stylesheets>
+    <!-- Add Navbar to the Top Section -->
+    <top>
+        <VBox style="-fx-padding: 0 0 20 0;"> <!-- Add padding directly in the FXML -->
+            <fx:include source="navbar.fxml" fx:id="navbar"/>
+        </VBox>
+    </top>
     <!-- Top: Title -->
     <top>
         <Label text="Chatbot Interface" style="-fx-font-size: 18px; -fx-font-weight: bold;" alignment="CENTER"
