--- a/src/main/resources/sidebar.fxml
+++ b/src/main/resources/sidebar.fxml
@@ -3,7 +3,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="TOP_LEFT" prefHeight="630.0" prefWidth="180.0" spacing="15.0" styleClass="sidebar" stylesheets="@../../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportmarket.sidebar" >
+<VBox alignment="TOP_LEFT" prefHeight="630.0" prefWidth="180.0" spacing="15.0" styleClass="sidebar"  xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sportmarket.sidebar" >
+    <stylesheets>
+        <URL value="@/CommunityStyle.css"/>
+    </stylesheets>
     <children>
         <Pane prefHeight="33.0" prefWidth="200.0" />
         <Button fx:id="homeButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0" style="-fx-background-color: #EFBF04;" text="accueil" onAction="#goToHome"/>
